<resources>
    <string name="app_name">We News</string>
    <string name="login"> Login </string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="password_content">Password</string>
    <string name="or_login">or login with</string>
    <string name="or_sign_up">or sign up with</string>
    <string name="email_content">E-mail</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="fui_sign_in_with_email">fui_sign_in_with_email</string>
    <string name="fui_sign_in_with_google">fui_sign_in_with_google</string>
    <string name="dont_have_an_account">Dont Have an account?</string>
    <string name="forget_password">Forget Password</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="settings">Settings</string>
    <string name="facebook_app_id">756248552687022</string>
    <string name="fb_login_protocol_scheme">fb214268554165523</string>
    <string name="facebook_client_token">868b23132fab3a5e473792adde50cc2b</string>
    <string name="change_password">Change Password</string>
    <string name="privacy_Policy">Privacy Policy </string>
    <string name="theme">Dark Theme</string>
    <string name="about_Us">About Us</string>
    <string name="contact_Us">Contact Us</string>
    <string name="log_out">Log out</string>
    <string name="Version">Version</string>
    <string name="is_this_news_fake">Is this news Fake!</string>
    <string name="paste_news_text">Paste news text</string>
    <string name="check_now">Check</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="canceled">Canceled</string>
    <string name="title">Do you want Exit ?</string>
    <string name="confirm">confirm</string>
    <string name="exit">exit</string>
    <string name="stay">stay</string>
    <string name="this_result_is_generated_by_ai_model_with_accuracy_of_97">This result is generated by our AI model\n with accuracy of 97%</string>
    <string name="check_another_news">Check Another News</string>
    <string name="published_at">Published at:</string>
    <string name="entertainment">Entertainment</string>
    <string name="business">Business</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="go_to_source_page">Go to source page</string>
    <string name="update_password">Change Password</string>
    <string name="your_password">Your Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">Save</string>
    <string name="string1"> Fake news is implemented specifically to works  on  the objective  of  detecting  fake  news and stop the rumors that  are  being  spread  through  the  various platforms  whether  it  be  social  media  or messaging  platforms to protecting the  society  from  these  unwanted  acts  of violence</string>
    <string name="string2"> The system will help the user to detect the fake news and separate them from certifiable ones, choosing the best features to obtain the highest precision and accuracy in detection</string>
    <string name="privacy_policy">Privacy Policy"</string>
    <string name="Introduction">Introduction</string>
    <string name="str_1">We use the data in the login process to generally facilitate the user\'s use of the software</string>
    <string name="Data_collection">Data collection</string>
    <string name="str_2">You can sign in with email or with Google, the data is not used for anything else</string>
    <string name="Data_sharing">Data sharing</string>
    <string name="str_3">The data is protected and is not shared with third parties, such as advertisers or analytics providers</string>
    <string name="Data_storage_and_security">Data storage and security</string>
    <string name="str_4">The data is stored in Firebase and the user can modify the password</string>
    <string name="save">Save Change</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="twitter_consumer_key">NWlBVlkxWG5UNG8tSzlKZlM0N2s6MTpjaQ</string>
    <string name="twitter_consumer_secret">NgK_X8DT2FIfYOikWHny2PFxyehf4hEBnxPoZTYkJEdezPLFnE</string>
</resources>