<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.nourelden515.wenews.ui.home.HomeViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.home.check.CheckFragment">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/logo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="@dimen/spacing_giant"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_giant"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo">

                <TextView
                    android:id="@+id/text_view_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/is_this_news_fake"
                    android:textSize="@dimen/text_size_large" />

                <RadioGroup
                    android:id="@+id/segmentedButtonGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="invisible"
                    android:background="@drawable/rounded_radio_group"
                    android:clipChildren="true"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/button_english"
                        style="@style/TextView"
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/segmented_button_background"
                        android:button="@null"
                        android:checked="true"
                        android:gravity="center"
                        android:text="@string/english" />

                    <RadioButton
                        android:id="@+id/button_arabic"
                        style="@style/TextView"
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/segmented_button_background"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/arabic" />

                    <!-- Add more RadioButton elements as needed -->

                </RadioGroup>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_news"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_medium"
                android:hint="@string/paste_news_text"
                app:layout_constraintTop_toBottomOf="@id/linear_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:minLines="10"
                    android:text="@={viewModel.news}"
                    android:paddingVertical="@dimen/padding_medium" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_check_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:background="@drawable/btn_shape"
                android:text="@string/check_now"
                android:textAllCaps="false"
                android:textColor="@color/white_500"
                android:textSize="@dimen/text_size_large"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_news" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>